--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             description: `Solutions to exercises from the 2024 course 'Rough Paths and Applications to
 Machine Learning' written by Thomas Cass and Cristopher Salvi.
                             <br><br><a href="https://arxiv.org/pdf/2404.06583" target="_blank">Lecture Notes</a>`,
-            link: null,
+            link: "https://nathanevaans.github.io/RP-Sols/",
             tags: ["Maths"],
             date: 2025
         },
