--- a/index.html
+++ b/index.html
@@ -432,15 +432,23 @@
    
     const projects = [
         {
-            title: "Rough Paths Exercises",
+            title: "Synchronisation of random angle rotations on $S^1$",
             wip: false,
-            description: `Solutions to exercises from the 2024 course 'Rough Paths and Applications to
-Machine Learning' written by Thomas Cass and Cristopher Salvi.
-                            <br><br><a href="https://arxiv.org/pdf/2404.06583" target="_blank">Lecture Notes</a>`,
-            link: "https://nathanevaans.github.io/RP-Sols/",
-            tags: ["Maths"],
-            date: 2025
+            description: `Visualisation that randomly distributed points on $S^1$ rigidly rotated by the same random angles will synchronise almost surely in the large time limit`,
+            link: "https://nathanevaans.github.io/random-circle-maps/",
+            tags: ["Maths", "Visualisation"],
+            date: 2026
         },
+//         {
+//             title: "Rough Paths Exercises",
+//             wip: false,
+//             description: `Solutions to exercises from the 2024 course 'Rough Paths and Applications to
+// Machine Learning' written by Thomas Cass and Cristopher Salvi.
+//                             <br><br><a href="https://arxiv.org/pdf/2404.06583" target="_blank">Lecture Notes</a>`,
+//             link: "https://nathanevaans.github.io/RP-Sols/",
+//             tags: ["Maths"],
+//             date: 2025
+//         },
         {
             title: "Simulating SDE Solutions: Lévy Area, Brownian Bridges and Rough Paths",
             wip: true,
