--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
         {
             title: "Synchronisation of random angle rotations on $S^1$",
             wip: false,
-            description: `Visualisation that randomly distributed points on $S^1$ rigidly rotated by the same random angles will synchronise almost surely in the large time limit`,
+            description: `Visualisation that randomly distributed points on $S^1$ acted on by random circle homeomorphisms will synchronise almost surely in the large time limit`,
             link: "https://nathanevaans.github.io/random-circle-maps/",
             tags: ["Maths", "Visualisation"],
             date: 2026
