--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
    
     const projects = [
         {
-            title: "Synchronisation of random angle rotations on $S^1$",
+            title: "Synchronisation of random circle homeomorphisms",
             wip: false,
             description: `Visualisation that randomly distributed points on $S^1$ acted on by random circle homeomorphisms will synchronise almost surely in the large time limit`,
             link: "https://nathanevaans.github.io/random-circle-maps/",
